<resources>
    <string name="app_name">Let\'s Play</string>
    <string name="add">añadir</string>
    <string name="add_note">agregar nota</string>
    <string name="add_bgames">añadir juegos</string>
    <string name="wish_list">Lista de Deseos</string>
    <string name="wishes">Deseos</string>
    <string name="games">Partidas</string>
    <string name="bgame">Juego</string>
    <string name="bgames">Juegos</string>
    <string name="author">Autor</string>
    <string name="authors">Autores</string>
    <string name="editorial">Editorial</string>
    <string name="editorials">Editoriales</string>
    <string name="ad_author">Añadir Autor</string>
    <string name="ad_editorial">Añadir Editorial</string>
    <string name="info">info</string>
    <string name="notes">Notas</string>
    <string name="delete">borrar</string>
    <string name="save">guardar</string>
    <string name="search">buscar</string>
    <string name="modify">Modificar</string>
    <string name="categories">Categorías</string>
    <string name="players">Jugadores</string>
    <string name="duration">Duración</string>
    <string name="name">Nombre</string>
    <string name="priority">Prioridad</string>
    <string name="cover_image">Portada</string>
    <string name="hint_write_note">Escribe tu nota aqui</string>
    <string name="game_time">Tiempo de Juego</string>
    <string name="posible_game">Juegos posibles</string>
    <string name="number_players">Número de Jugadores</string>



</resources>