<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_fondo_todo"
    tools:context=".ui.activities.Autores">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/main_vguide10"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/main_vguide90"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/main_hguide90"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.96"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/autores_info"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="80dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/info"
        android:textAllCaps="true"
        android:textSize="12sp"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toTopOf="@id/main_hguide90"
        app:layout_constraintEnd_toStartOf="@+id/autores_notas"
        app:layout_constraintStart_toEndOf="@id/main_vguide10"
        app:layout_constraintTop_toBottomOf="@+id/autores_lista"
        app:strokeColor="@color/black"
        android:backgroundTint="#00a7bf"
        android:textColor="@color/color_on_primary"
        app:strokeWidth="2dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/autores_notas"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/notes"
        android:textAllCaps="true"
        android:textSize="12sp"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toTopOf="@id/main_hguide90"
        app:layout_constraintEnd_toStartOf="@id/main_vguide90"
        app:layout_constraintStart_toEndOf="@+id/autores_info"
        app:layout_constraintTop_toBottomOf="@+id/autores_lista"
        app:strokeColor="@color/black"
        android:backgroundTint="#00a7bf"
        android:textColor="@color/color_on_primary"
        app:strokeWidth="2dp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/autores_lista"
        android:layout_width="0dp"
        android:layout_height="189dp"
        android:layout_marginBottom="65dp"
        app:layout_constraintBottom_toTopOf="@+id/main_hguide90"
        app:layout_constraintStart_toStartOf="@id/main_vguide10"
        app:layout_constraintEnd_toStartOf="@id/main_vguide90"
        app:layout_constraintTop_toBottomOf="@+id/autores_juegos"
        android:background="@android:color/transparent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/autor_juegos_recyclerview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:listitem="@layout/autor_recyclerview"
            tools:itemCount="4"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/autores_juegos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/montserrat_bold"
        android:paddingBottom="10dp"
        android:text="@string/bgames"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/autores_lista"
        app:layout_constraintEnd_toStartOf="@id/main_vguide90"
        app:layout_constraintStart_toEndOf="@id/main_vguide10"
        app:layout_constraintTop_toBottomOf="@+id/autores_buscar">

    </com.google.android.material.textview.MaterialTextView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/autores_buscar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="247dp"
        android:layout_marginEnd="71dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/search"
        android:textAllCaps="true"
        android:textSize="12sp"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toTopOf="@+id/autores_juegos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/autores_nombre"
        app:backgroundTint="#B8cee0"
        android:textColor="@color/black"
        app:strokeColor="@color/black"
        app:strokeWidth="2dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/autores_nombre"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="60dp"
        android:hint="@string/name"
        android:textColorHint="#B8cee0"
        app:boxCornerRadiusBottomEnd="15dp"
        app:boxCornerRadiusBottomStart="15dp"
        app:boxCornerRadiusTopEnd="15dp"
        app:boxCornerRadiusTopStart="15dp"
        app:boxStrokeColor="#B8cee0"
        app:boxStrokeWidth="2dp"
        app:layout_constraintBottom_toTopOf="@+id/autores_juegos"
        app:layout_constraintEnd_toEndOf="@id/main_vguide90"
        app:layout_constraintStart_toEndOf="@id/main_vguide10"
        app:layout_constraintTop_toBottomOf="@+id/autores_encabezado">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/autores_nombre_in"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/montserrat_bold"
            android:imeOptions="actionDone"
            android:inputType="textPersonName"
            android:textSize="14sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/autores_encabezado"
        android:layout_width="331dp"
        android:layout_height="84dp"
        android:layout_marginBottom="90dp"
        app:layout_constraintBottom_toTopOf="@+id/autores_nombre"
        app:layout_constraintEnd_toStartOf="@id/main_vguide90"
        app:layout_constraintStart_toEndOf="@+id/main_vguide10"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/autores_back"
            android:layout_width="84dp"
            android:layout_height="61dp"
            android:contextClickable="true"
            app:cornerRadius="25dp"
            android:drawableLeft="@drawable/ic_flecha_volv"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/autores_titulo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:backgroundTint="@color/white"
            android:textColor="@color/black"
            app:strokeColor="@color/black"
            app:strokeWidth="2dp">

        </com.google.android.material.button.MaterialButton>


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/autores_titulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/authors"
            android:layout_marginStart="20dp"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </androidx.appcompat.widget.AppCompatTextView>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/autores_icono"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="249dp"
            android:src="@drawable/ic_icono_autores"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </androidx.appcompat.widget.AppCompatImageView>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>